# dyswindows

./: ChangeLog  Makefile.am  Makefile.in  TODO  aclocal.m4  autogen.sh  configure  configure.ac  startY.devel.in
Y/: Makefile.am  Makefile.in  Makefile.ycl  Makefile.ymk  const.h  setup.h.in  y.h
Y/buffer/: buffer.c  bufferio.c  bufferio.h  imagebuffer.c  painter.h
Y/input/: pointer.h  ykb.c  ykb_action.c  ykbmap.h  ykm.c  ykm.h  ykm_p.h
Y/main/: config.h  control.h  paths.c  unix.h  y.c
Y/message/: message.c  message.h  parse_support.h  tuple.h
Y/modules/: module_interface.h  theme.h  theme_interface.h  videodriver_interface.h  windowmanager.c  windowmanager_interface.h
Y/object/: class_p.h
Y/screen/: renderer.h  rendererclass.h  screen.h
Y/text/: font.c  font.h  utf8.c  utf8.h
Y/trace/: trace.c  trace.h
Y/util/: dbuffer.c  index_check.c  llist.c  log.c  pqueue.c  pqueue.h  rbtree.h  rbtree_check.c  yutil.h  zorder.h
Y/widget/: desktop.h  gridlayout.c  label.c  label.h  widget.c  window.h  ybin.c  ybutton.h  ycontainer.h  ymenu.c  ymenu.h  yradiobutton.h  yrowlayout.c  ytogglebutton.h
autoconf/: libiterm.m4  test.Versions
build-misc/: Makefile.in  gentreeinfo  yclpp.in
build-misc/YCL/: YCD.pm
build-misc/YCL/Client/: Cxx.pm  Cxxh.pm
clients/: Makefile.in  clients.mk
clients/calculator/: Makefile.am  calculator.cc
clients/clock/: Makefile.in  clock.cc  clock.h
clients/sample/: Makefile.am  Makefile.in  sample.cc
clients/terminal/: Makefile.am  Makefile.in  VTScreenView.h  terminal.cc  terminal.h
clients/tools/: Makefile.am  Makefile.in  startY.in
config/: Makefile.in  server.conf
config/keymaps/: Makefile.am  Makefile.in  basic.ykb  us.ykb
config/keymaps/YKB/: YKM.pm
data/: Makefile.in
doc/: Makefile.in  doxygen-Y.cfg.in
doc/devel/: plan_0.3.txt
libYc++/: Makefile.am  Makefile.in  Makefile.ycl  Versions
libYc++/Y/: c++.h
libYc++/Y/c++/: canvas.cc  class.cc  class.h  connection.cc  connection.h  connection_io.cc  connection_nothreads.cc  connection_objects.cc  gridlayout.cc  object.h  thread_support.cc  thread_support.h  ticker.cc  ticker.h  timer.h  widget.cc  widget.h  window.cc
libYc++/Y/c++/objects/: ybin.h  ybutton.cc  ycontainer.cc  ycontainer.h  yradiobutton.cc  yradiobutton.h  yradiogroup.cc  yrowlayout.h  ytogglebutton.cc
libYconfig/: Makefile.am  libconfig.c  libconfig.h
libYconfig/examples/: Makefile  Makefile.am  Makefile.in  example.c
modules/: Versions
modules/drivers/: Makefile.in
modules/drivers/input/: Makefile.am  Makefile.in
modules/drivers/video/: Makefile.am  Makefile.in
modules/themes/: Makefile.am
modules/themes/eau/: Makefile  Makefile.am  Makefile.in  NOTE  eau.c  windowDeco.c  yButton.h  yCheckBox.c  yLabel.c
modules/wm/: Makefile.in
trunk/: AUTHORS  COPYING  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
trunk/Y/: Makefile.am  Makefile.in  Makefile.ymk  setup.h  setup.h.in  ytypes.h
trunk/Y/buffer/: buffer.h  bufferclass.h  imagebuffer.h  painter.c
trunk/Y/input/: pointer.c  ykb.h  ykb_action.h  ykbmap.c  ykbmap_p.h
trunk/Y/main/: config.c  control.c  unix.c  y.c
trunk/Y/message/: client.c  client.h  client_p.h  tuple.c
trunk/Y/modules/: module.c  module.h  theme.c  windowmanager.h
trunk/Y/object/: class.c  class.h  object.c  object.h  object_p.h
trunk/Y/screen/: cairorenderer.c  cairorenderer.h  renderer.c  screen.c  viewport.c  viewport.h
trunk/Y/trace/: tracetest.c
trunk/Y/util/: check.h  color.c  color.h  dbuffer.h  index.c  index.h  llist.h  log.h  pqueue_check.c  rbtree.c  rectangle.c  rectangle.h  rectangle_check.c  yhash.c  yhash.h  yprimes.c  yprimes.h  yutil.c  zorder.c
trunk/Y/widget/: canvas.c  canvas.h  console.c  console.h  desktop.c  gridlayout.h  widget.c  widget.h  widget_p.h  window.c  ybin.h  ybutton.c  ycheckbox.c  ycheckbox.h  ycontainer.c  ylayoutcell.c  ylayoutcell.h  ymenu.h  yradiobutton.c  yradiogroup.c  yradiogroup.h  yrowlayout.h  ytogglebutton.c
trunk/autoconf/: binutils.m4  c-gcc.m4  freetype.m4
trunk/build-misc/: Makefile.am  common.mk  yclmakemake
trunk/build-misc/YCL/Server/: C.pm
trunk/clients/: Makefile.am  Makefile.in
trunk/clients/calculator/: Makefile.in  calculator.cc  calculator.h
trunk/clients/clock/: Makefile.am  Makefile.in  clock.cc
trunk/clients/sample/: Makefile.in  sample.cc  sample.h
trunk/clients/terminal/: VTScreenView.cc
trunk/clients/tools/: Makefile.in  yctl.cc
trunk/config/: Makefile.am  server.conf
trunk/config/keymaps/: Makefile.in  deadkeys.ykb  gb.Ykeymap  gb.ykb  iso9995.ykb  jp106.ykb  pc.ykb  qwerty.ykb  test.ykb  us.Ykeymap  ykbcomp.in
trunk/config/keymaps/YKB/: YKB.pm  YKBGrammar
trunk/data/: Makefile.am
trunk/doc/: Makefile.am  Makefile.in  doxygen-libYc++.cfg.in
trunk/libYc++/: Makefile.in  Makefile.ymk
trunk/libYc++/Y/c++/: canvas.h  connection.cc  connection_threads.cc  connection_unix.cc  console.cc  console.h  exception.h  gridlayout.h  label.cc  label.h  message.cc  message.h  object.cc  reply.cc  reply.h  timer.cc  value.cc  value.h  window.h
trunk/libYc++/Y/c++/objects/: ybin.cc  ybutton.h  ycheckbox.cc  ycheckbox.h  yradiogroup.h  yrowlayout.cc  ytogglebutton.h
trunk/libYconfig/: Makefile  Makefile.am  Makefile.in  Readme  libconfig.c  libconfig.c~  libconfig.h  libconfig.h~
trunk/libYconfig/examples/: Makefile  Makefile.am  Makefile.in
trunk/modules/: Makefile.am  Makefile.in  module.mk
trunk/modules/drivers/: Makefile.am  Makefile.in
trunk/modules/drivers/input/: Makefile.in
trunk/modules/drivers/video/glx/: Makefile.am  glx.c
trunk/modules/drivers/video/xlib/: Makefile.am  Makefile.in  xlib.c
trunk/modules/themes/: Makefile.am  Makefile.in
trunk/modules/themes/default/: Makefile.am  draw.c  draw.h  window.h
trunk/modules/themes/eau/: Makefile.am  Makefile.in  font.c  windowDeco.h  yButton.c  yCheckBox.c  yCheckBox.h  yLabel.h  yRadioButton.c  yRadioButton.h
trunk/modules/wm/: Makefile.in
trunk/modules/wm/default/: Makefile.am  Makefile.in  default.c
wiki/: TODO_03.wiki  TODO_04.wiki
(+10 files in other folders)
