include $(top_srcdir)/build-misc/common.mk
include Makefile.ymk

bin_PROGRAMS = Y

if WANT_TRACE
bin_PROGRAMS += traceY
endif

EXTRA_PROGRAMS = traceY

Y_SOURCES = \
buffer/buffer.c \
buffer/bufferio.c \
buffer/painter.c \
buffer/imagebuffer.c \
modules/theme.c \
modules/windowmanager.c \
main/control.c \
main/paths.c \
main/y.c \
main/config.c \
main/unix.c \
message/client.c \
message/message.c \
message/tuple.c \
util/dbuffer.c \
util/index.c \
util/log.c \
util/rectangle.c \
util/rbtree.c \
util/yutil.c \
util/pqueue.c \
util/llist.c \
util/yhash.c \
util/yprimes.c \
util/zorder.c \
util/color.c \
widget/ylayoutcell.c \
input/pointer.c \
input/ykb.c \
input/ykb_action.c \
input/ykbmap.c \
input/ykm.c \
text/font.c \
text/utf8.c \
object/class.c \
screen/renderer.c \
screen/cairorenderer.c \
screen/viewport.c \
$(Y_class_sources)

traceY_SOURCES = $(Y_SOURCES) \
trace/trace.c

noinst_HEADERS = \
buffer/buffer.h \
buffer/bufferio.h \
buffer/bufferclass.h \
buffer/painter.h \
buffer/imagebuffer.h \
modules/module.h \
modules/videodriver_interface.h \
modules/module_interface.h \
modules/windowmanager_interface.h \
modules/windowmanager.h \
modules/theme.h \
modules/theme_interface.h \
main/control.h \
main/config.h \
main/unix.h \
message/client.h \
message/client_p.h \
message/message.h \
message/parse_support.h \
message/tuple.h \
util/check.h \
util/dbuffer.h \
util/index.h \
util/rectangle.h \
util/rbtree.h \
util/yutil.h \
util/pqueue.h \
util/llist.h \
util/yhash.h \
util/yprimes.h \
util/zorder.h \
util/log.h \
util/color.h \
widget/widget.h \
widget/widget_p.h \
widget/window.h \
widget/desktop.h \
widget/label.h \
widget/gridlayout.h \
widget/canvas.h \
widget/console.h \
widget/ycontainer.h \
widget/ybin.h \
widget/ybutton.h \
widget/ytogglebutton.h \
widget/ycheckbox.h \
widget/yradiobutton.h \
widget/yradiogroup.h \
widget/ymenu.h \
widget/yrowlayout.h \
widget/ylayoutcell.h \
input/pointer.h \
input/ykb.h \
input/ykb_action.h \
input/ykbmap.h \
input/ykbmap_p.h \
input/ykm.h \
input/ykm_p.h \
text/font.h \
text/utf8.h \
object/class.h \
object/object.h \
object/object_p.h \
screen/renderer.h \
screen/rendererclass.h \
screen/screen.h \
screen/cairorenderer.h \
screen/viewport.h \
trace/trace.h \
y.h \
ytypes.h \
setup.h 

TESTS = \
util/index_check \
util/rbtree_check \
util/pqueue_check \
util/rectangle_check \
trace/tracetest

check_PROGRAMS = $(TESTS)

util_index_check_SOURCES = util/index_check.c util/index.c util/yutil.c util/log.c

util_rbtree_check_SOURCES = util/rbtree_check.c util/rbtree.c util/yutil.c util/log.c

util_pqueue_check_SOURCES = util/pqueue_check.c util/pqueue.c util/yutil.c util/log.c

util_rectangle_check_SOURCES = util/rectangle_check.c util/rectangle.c \
 util/yutil.c util/llist.c util/log.c

trace_tracetest_SOURCES = trace/tracetest.c trace/trace.c

Y_LDFLAGS = -Wl,-export-dynamic

if WANT_GLITZ
Y_LDADD = $(FREETYPE_LIBS) $(LIBPNG_LIBS) $(CAIRO_LIBS) $(GLITZ_GLX_LIBS) -ldl
else
Y_LDADD = $(FREETYPE_LIBS) $(LIBPNG_LIBS) $(CAIRO_LIBS) -ldl
endif

INCLUDES += $(FREETYPE_CPPFLAGS) $(LIBPNG_CFLAGS) $(CAIRO_CPPFLAGS) -I.ycl

traceY_CPPFLAGS = -DTRACE_ON=1 $(AM_CPPFLAGS) $(INCLUDES)

traceY_LDFLAGS = $(Y_LDFLAGS)
traceY_LDADD = $(Y_LDADD)

trace_tracetest_CPPFLAGS = -DTRACE_ON=1 $(AM_CPPFLAGS) $(INCLUDES)

pkginclude_HEADERS = \
        const.h

classdir = $(pkgdatadir)/classes
class_DATA = $(Y_class_defs)

MAINTAINERCLEANFILES = $(srcdir)/Makefile.ymk
CLEANFILES += main/paths.tab main/treeinfo.h $(Y_class_files) $(Y_class_defs)
BUILT_SOURCES = main/paths.tab main/treeinfo.h $(Y_class_files)
EXTRA_DIST = Makefile.ycl

main/paths.tab: Makefile
	@echo "Creating paths.tab"
	@echo "/* Generated by Makefile on" > $@
	@date >> $@
	@echo " */" >> $@
	@echo >> $@
	@echo "#define PREFIX \"$(prefix)\"" >> $@
	@echo "#define EXEC_PREFIX \"$(exec_prefix)\"" >> $@
	@echo "#define BINDIR \"$(bindir)\"" >> $@
	@echo "#define SBINDIR \"$(sbindir)\"" >> $@
	@echo "#define DATADIR \"$(datadir)\"" >> $@
	@echo "#define SYSCONFDIR \"$(sysconfdir)\"" >> $@
	@echo "#define LOCALSTATEDIR \"$(localstatedir)\"" >> $@
	@echo "#define PKGLIBDIR \"$(pkglibdir)\"" >> $@

main/treeinfo.h: Makefile
	$(top_srcdir)/build-misc/gentreeinfo -r $(top_srcdir) -o $@

$(srcdir)/Makefile.ymk: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.ycl $(top_srcdir)/build-misc/yclmakemake
	$(top_srcdir)/build-misc/yclmakemake -Y -s -o $@ $(srcdir)/Makefile.ycl

yclpp = $(top_builddir)/build-misc/yclpp
yclpp_lib = $(top_srcdir)/build-misc
