include $(top_srcdir)/build-misc/common.mk
include $(top_srcdir)/modules/module.mk

themelibdir = ${pkglibdir}/theme
#themelib_LTLIBRARIES = eauTheme.la

#noinst_HEADERS = window.h draw.h font.h

#eauTheme_la_SOURCES = default.c window.c draw.c font.c
#eauTheme_la_LDFLAGS = -module
#eauTheme_la_LIBADD  = $(CAIRO_LIBS)

# INCLUDES += $(CAIRO_CPPFLAGS)
